<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.teams.teamdetail.teamstatistics.TeamStatisticsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_margin="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginBottom="4dp"
                    android:gravity="center" android:text="@string/matches"
                    android:textColor="@android:color/black"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp" android:background="@android:color/darker_gray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp" android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="3"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/home"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/away"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/total"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp" android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="3"
                        android:gravity="center" android:text="@string/played"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp" android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="3"
                        android:gravity="center" android:text="@string/wins"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp" android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="3"
                        android:gravity="center" android:text="@string/draws"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp" android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="3"
                        android:gravity="center" android:text="@string/loses"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_margin="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginBottom="4dp"
                    android:gravity="center" android:text="@string/goals"
                    android:textColor="@android:color/black"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp" android:background="@android:color/darker_gray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp" android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="3"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/home"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/away"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/total"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp" android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="3"
                        android:gravity="center" android:text="@string/goals_for"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp" android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="3"
                        android:gravity="center" android:text="@string/goals_against"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_margin="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginBottom="4dp"
                    android:gravity="center" android:text="@string/average_goals"
                    android:textColor="@android:color/black"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp" android:background="@android:color/darker_gray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp" android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="3"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/home"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/away"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/total"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp" android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="3"
                        android:gravity="center" android:text="@string/goals_for"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp" android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="3"
                        android:gravity="center" android:text="@string/goals_against"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:layout_weight="1"
                        android:gravity="center" android:text="@string/_0"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>